protocols/tests/snapshots/protocols__typecheck__tests__calyx_go_done_struct.snap
---
source: protocols/src/typecheck.rs
expression: content
---
warning: Inferred RHS type as u32 from LHS type u32.
   ┌─ tests/calyx_go_done/calyx_go_done_struct.prot:15:3
   │
15 │   dut.ii := X;
   │   ^^^^^^^^^^^^ Inferred RHS type as u32 from LHS type u32.

error: Expected oo to be a struct's input field,
                but oo is not a field of a struct
   ┌─ tests/calyx_go_done/calyx_go_done_struct.prot:16:3
   │
16 │   oo := dut.oo;
   │   ^^^^^^^^^^^^^ Expected oo to be a struct's input field,
                but oo is not a field of a struct
